--- a/web/death_of_the_pixel/index.html
+++ b/web/death_of_the_pixel/index.html
@@ -5,8 +5,10 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="stylesheet" type="text/css" href="stylesheets/screen.css" />
+	<script src="js/jquery-1.9.1.js" type="text/javascript"></script>
+	<script src="js/slideshow.js" type="text/javascript"></script>
 </head>
-<body class="presentation">
+<body>
 	<header class="slide current">
 		<hgroup>
 			<h1>The Death of the Pixel</h1>
