Got basic slide transitions working.

--- a/web/death_of_the_pixel/index.html
+++ b/web/death_of_the_pixel/index.html
@@ -9,7 +9,7 @@
 	<script src="js/slideshow.js" type="text/javascript"></script>
 </head>
 <body>
-	<header class="slide current">
+	<header class="slide current visible">
 		<hgroup>
 			<h1>The Death of the Pixel</h1>
 			<h2>by <a href="http://cirrus.twiddles.com/">James Nash</a></h2>
